# my_bevy_template

./: Cargo.toml
.cargo/: config.toml
crates/bevy_panic/: Cargo.toml
crates/client/: Cargo.toml
src/: main.rs  panic_handler.rs
