[workspace]
name = "pong"
version = "0.1.0"
edition = "2024"
members = ["crates/*"]
resolver = "3"

[dependencies]
avian2d = "0.4.0"
bevy = "0.17.2"
bevy_asset_loader = "0.24.0-rc.1"
bevy_enhanced_input = "0.19.1"
bevy_rand = { version = "0.12.1", features = ["wyrand"] }
rand = "0.9.2"
rfd = "0.15.4"

[features]
default = []
dev = ["bevy/dynamic_linking"]

[profile.release.package."*"]
debug = true

[profile.dist]
inherits = "release"
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
