[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
avian2d = "0.4.0"
bevy = "0.17.2"
bevy_asset_loader = "0.24.0-rc.1"
bevy_enhanced_input = "0.19.1"
bevy_rand = { version = "0.12.1", features = ["wyrand"] }
rand = "0.9.2"
rfd = "0.15.4"
bevy_panic = { path = "crates/bevy_panic" }

[profile.release]
debug = "limited"

[profile.dist]
inherits = "release"
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
